--- a/Lab1/manifest.json
+++ b/Lab1/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "https://martinlindernilsson.github.io/mobile-development/Lab1/index.html",
   "display": "standalone",
-  "orientation": "landscape"
+  "orientation": "portrait"
 }
